  * grep-dctrl: Make a more modest fix for #525525 in adding an --ensure-dctrl
    option that makes sure that the output (in the absence of the -n switch)
    is in dctrl format.
    - Later on we may want to make --ensure-dctrl the default.  In anticipation,
      a --compat option has been added that countermands any --ensure-dctrl.

 -- Antti-Juhani Kaijanaho <ajk@debian.org>  Sun, 13 Nov 2011 20:24:48 +0200

dctrl-tools (2.19) unstable; urgency=low

  [ David Prévot ]
  * Stylish fix to grep-dctrl(1) manpage (closes: #325169)
  * Makes manpages translatable (using po4a), closes: #615877
  * Fix example in manpage (closes: #589827)
  * Update French runtime translation (closes: #628013)
  * Initial French manpages translation
  
  [ Antti-Juhani Kaijanaho ]
  * Merge 2.18ubuntu1
  * debian/control [Standards-Version]: Updated to 3.6.2 (no changes needed).
  * grep-dctrl/grep-dctrl.c: Output a stanza separator unconditionally.
    Closes: #525525 (do not separate stanzas with empty lines when showing
                     Description field only)
    [Reported by Stefano Zacchiroli <zack@debian.org>]
  * lib/paragraph.[ch], grep-dctrl/grep-dctrl.c: Use the actual spelling of
    field names in output, instead of the command line spelling.
    Closes: #209134 (keyword case shouldn't be influenced by -s)
    Reported by Dan Jacobson <jidanni@jidanni.org>.
  * grep-dctrl/grep-dctrl.c: Clean up some dead code.
  * grep-dctrl: Rewrite predicate code to use a tree instead of a bytecode.

 -- Antti-Juhani Kaijanaho <ajk@debian.org>  Thu, 20 Oct 2011 09:56:38 +0300

dctrl-tools (2.18ubuntu1) oneiric; urgency=low

  * lib/msg.h, grep-dctrl/rc.c, join-dctrl/join-dctrl.c: Pass the arguments to
    message() in the right order (fixes FTBFS; lp: #774391, Closes: #624707)

 -- Michael Bienia <geser@ubuntu.com>  Mon, 02 May 2011 08:25:34 +0100

dctrl-tools (2.18) unstable; urgency=low

  * debian/rules: Override prefix and sysconfdir even for building